Archive2/d9/73bedc26ba3942/output
main.cpp:18:6: error: chosen constructor is explicit in copy-initialization
   A a = {1,2};
     ^   ~~~~~
main.cpp:6:13: note: constructor declared here
   explicit A(int, int) {}
            ^
1 error generated.
